# hangugeoreul-gongbuhaeyo

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .renovaterc  Dockerfile  Makefile  README.md  conftest.py  docker-compose.yml  pyproject.toml  setup.cfg
.github/workflows/: workflow.yml
deploy/: nginx.conf
src/config/: .env.template
src/locale/ru/LC_MESSAGES/: django.mo  django.po
src/schemas/: study_day.json  word.json
src/server/: urls.py
src/server/apps/days/: __init__.py  admin.py  apps.py  models.py  serializers.py  urls.py  views.py
src/server/apps/days/migrations/: 0001_initial.py  0002_word.py  0003_alter_studyday_id_alter_word_day_alter_word_id.py
src/server/apps/days/services/study_day/: responses.py
src/server/apps/swagger/: urls.py
src/server/apps/users/: __init__.py  admin.py  apps.py  models.py
src/server/apps/users/infrastructure/: managers.py
src/server/apps/users/migrations/: 0001_initial.py  0002_alter_user_is_staff.py  0003_alter_user_id.py
src/server/services/: responses.py  schema.py  serializer.py
src/server/settings/: __init__.py
src/server/settings/components/: common.py  fields.py
src/server/settings/environments/: development.py  local.py  production.py
src/tests/plugins/: django_settings.py
src/tests/plugins/days/: fixtures.py
src/tests/test_apps/test_days/test_models/: test_study_day_model.py  test_word_model.py
src/tests/test_apps/test_days/test_views/: test_days_all_view.py
src/tests/test_apps/test_swagger/: test_urls.py
src/tests/test_apps/test_users/test_models/: test_user_model.py
src/tests/test_server/: test_urls.py
