[tool.poetry]
name = "hangugeoreul-gongbuhaeyo"
version = "0.1.0"
description = "Korean Language Learn Helper."
authors = ["Rafail Medzhidoc <rafayt323@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
