[tool.poetry]
name = "hangugeoreul-gongbuhaeyo"
version = "0.1.0"
description = "Korean Language Learn Helper."
authors = ["Rafail Medzhidov <rafayt323@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

django = { version = "^5.0.0", extras = ["argon2"] }
django-split-settings = "^1.2"
django-axes = "^7.0.0"
django-csp = "^3.7"
django-health-check = "^3.16"
django-http-referrer-policy = "^1.1"
django-permissions-policy = "^4.18"
django-stubs-ext = "^5.0.0"

psycopg2-binary = "^2.9"
gunicorn = "^23.0.0"
python-decouple = "^3.8"
structlog = "^24.0.0"
djangorestframework = "^3.14.0"
jsonschema = "^4.19.2"
jsonpath-ng = "^1.6.0"
django-cors-headers = "^4.3.0"
drf-yasg = "^1.21.7"

[tool.poetry.group.dev.dependencies]
django-debug-toolbar = "^4.2"
django-querycount = "^0.8"
django-migration-linter = "^5.0"
django-extra-checks = "^0.14.0"
nplusone = "^1.0"

wemake-python-styleguide = "^0.18"
flake8-pytest-style = "^1.7"
flake8-django = "^1.4"
flake8-logging-format = "^2024.0.0"

pytest = "^8.0.0"
pytest-django = "^4.5"
django-test-migrations = "^1.3"

pyright = "^1.1.333"

django-stubs = { version = "^5.0.0" }
pre-commit = "^4.0.0"

[tool.pyright]
venvPath = '.'
venv = '.venv'
pythonVersion = '3.11'
verboseOutput = true
ignore = ['**/server/settings/*']
reportGeneralTypeIssues = false

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
